--- a/contactus.html
+++ b/contactus.html
@@ -4,5 +4,7 @@
 	</head>
 	<body>
 		Contact US
+		<a href="http://facebook.com" >facebook link</a>
+		<a href="http://twitter.com" >twitter link</a>
 	</body>
 </html>
